# usb2bt

./: CMakeLists.txt  selected_device.txt
src/: config.cpp  config.h  device_manager.cpp  device_manager.hpp  gamepad.h  input_device_info.hpp  main.cpp  usb_reader.cpp  usb_reader.hpp  xinput_mapper.cpp  xinput_mapper.hpp
